--- a/assets2/css/style2.css
+++ b/assets2/css/style2.css
@@ -406,7 +406,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("..assets2/img/taman kanak kanak.jpg") top center;
+  background: url("../img/taman kanak kanak.jpg") top center;
   background-size: cover;
   position: relative;
 }
